--- a/list_3/List 3.ipynb
+++ b/list_3/List 3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "visible-boost",
    "metadata": {},
    "outputs": [],
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b7c46fd2",
    "metadata": {},
    "outputs": [],
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99132c9c",
+   "id": "99c1610e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -688,7 +688,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python11",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -702,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
